--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "dev": "run-p pug:watch sass:watch weasyprint:watch",
     "prod": "run-p pug sass && yarn weasyprint",
     "pug": "pug src/index.pug --out build",
-    "pug:watch": "chokidar -d 0 --initial 'src/**/*.pug' -c 'yarn pug'",
+    "pug:watch": "chokidar -d 0 --initial \"src/**/*.pug\" -c \"yarn pug\"",
     "sass": "node-sass src/style.scss --output-style compressed --output build",
-    "sass:watch": "chokidar -d 0 --initial 'src/**/*.scss' -c 'yarn sass'",
+    "sass:watch": "chokidar -d 0 --initial \"src/**/*.scss\" -c \"yarn sass\"",
     "weasyprint": "make-dir dist && weasyprint build/index.html dist/index.pdf",
-    "weasyprint:watch": "make-dir build && chokidar -d 0 --initial 'build/**/*' -c 'yarn weasyprint'"
+    "weasyprint:watch": "make-dir build && chokidar -d 0 --initial \"build/**/*\" -c \"yarn weasyprint\""
   }
 }
